# community

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Procfile  Procfile.checker  README.md  build.py  conftest.py  db.sqlite.prod  db.yaml  docker-compose.yml  input.css  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  scrapy.cfg  tailwind.config.js  techcity.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  test.yml
.kamal/: secrets
.kamal/hooks/: docker-setup  pre-deploy
checker/: Procfile.checker  items.py  middlewares.py  settings.py
checker/checker/: pipelines.py
checker/spiders/: crawler.py
community/: __main__.py  build.py  constants.py  events.py  extensions.py  frontend.py  models.py  repositories.py
config/: crontab  deploy.yml  prometheus.yml
data/broadcasts/: 01zgi3Vy.yaml  0HKun1MQ.yaml  0c9JHdXk.yaml  179t4Myc.yaml  1DJ4hoP5.yaml  1XwZ3F6I.yaml  1wGvHTsD.yaml  2D0Qxn3D.yaml  2GssxlcS.yaml  37CXbPMH.yaml  3vNb5j8h.yaml  49I2c4Be.yaml  4IRdahxT.yaml  4rhPoTPe.yaml  5MRj8MvC.yaml  5NptbCHd.yaml  5TBR0j4O.yaml  5exctG6B.yaml  5pL2Qbot.yaml  5yGLuUMs.yaml  65Kx0LyP.yaml  6F4ly7N0.yaml  6WluWARa.yaml  79Q8oYEu.yaml  856RmrIo.yaml  8O8H9YQL.yaml  8VDZHjGI.yaml  8osvnAxB.yaml  8qq3n5Ox.yaml  9TtnKuhX.yaml  AIxr36fU.yaml  AgLUwtdq.yaml  B2FnHsqR.yaml  BnRvebgX.yaml  C3eJxOes.yaml  CjeMO4Gl.yaml  Ct7GZNIT.yaml  Cth9NKG5.yaml  CzfPD8cl.yaml  DMkixFZ5.yaml  (+142 more)
data/events/aws-frederick/: 0c9JHdXk.yaml  298585615.yaml  299093646.yaml  2HIvQxor.yaml  4IRdahxT.yaml  Gcr1yiya.yaml  (+27 more)
data/groups/: aws-frederick.md  frederick-code-and-coffee.md  frederick-open-source.md  frederick-web-tech.md  python-frederick.md  techfrederick.md  wordpress-frederick.md
data/hackathons/: 2016.md
docs/: plans-2024.md  python-frederick-playbook.md
docs/techcity/: channels.md  cli.md  commands.md  config.md  connectors.md  content.md  event-recording-ingestion.md  events.md  gateways.md  index.md  pubsub.md  services.md
frontend/: input.css  package-lock.json  package.json  tailwind.config.js
project/: asgi.py  settings.py  testing_settings.py  urls.py  wsgi.py
techcity/: build.py  cli.py  configuration.py  constants.py  events.py  fetch.py  ids.py  models.py  pubsub.py  repositories.py  service.py
techcity/api/: urls.py  views.py
techcity/core/: admin.py  apps.py  context_processors.py  frontend.py  models.py  serializers.py  urls.py  views.py
techcity/events/: __init__.py  admin.py  apps.py  calendar.py  models.py  tasks.py  urls.py  views.py
techcity/groups/: admin.py  apps.py  models.py  urls.py  views.py
techcity/migrations/: 0001_time_to_start_at.py  0002_meetup_to_native_event_id.py  0003_venue_address.py
techcity/sentry/: apps.py
techcity/testing/: factories.py
templates/: base.html  event.html  event_card.html  group.html  group_card.html  group_event_card.html  group_events.html  groups.html  hackathon.html  hackathon_card.html  index.html  palette-rendered.html  palette.html
templates/core/: index.html
templates/events/: card.html  detail.html
templates/groups/: card.html  detail.html  event_card.html  events.html
(+362 files in other folders)
