[project]
name = "techcity"
version = "2024.09"
requires-python = ">=3.12"
dependencies = [
    "django-debug-toolbar>=4.4.6",
    "django>=5.1.1",
    "environs>=11.0.0",
    "markdown>=3.7",
    "pydantic>=2.9.1",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sqids>=0.5.0",
    "urllib3>=2.2.3",
]

[tool.uv]
dev-dependencies = [
    "honcho>=1.1.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
testpaths = [
    "techcity",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # bandit: Use of `assert` detected
    "S101",
]
